--- a/pages/page3.html
+++ b/pages/page3.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <script src="main.js"></script>
+    <title>Projeto SI - Página 3</title>
+  </head>
+
+
 <body>
-    
+  <ul>
+    <li><a href="index.html">Página 1</a></li>
+    <li>Página 2</li>
+    <li><a href="page3.html">Página 3</a></li>
+    <li><a href="page4.html">Página 4</a></li>
+    <li><a href="page5.html">Página 5</a></li>
+  </ul>
+
+  <h1>Galeria de Imagens - Página 3</h1>
+
+  <form id="imageForm">
+    <input type="text" id="imageUrl" placeholder="URL da imagem" required>
+    <input type="text" id="imageTitle" placeholder="Título da imagem" required>
+    <input type="text" id="imageDescription" placeholder="Descrição da imagem" required>
+    <button type="submit" id="addButton">Adicionar</button>
+  </form>
+
+  <div class="gallery"></div>
 </body>
+
 </html>
