--- a/pages/index.html
+++ b/pages/index.html
@@ -14,20 +14,31 @@
     <title>Projeto SI</title>
   </head>
 
-  <body>
-    <ul>
-      <li>Página 1</li>
-      <li><a href="page2.html">Página 2</a></li>
-      <li><a href="page3.html">Página 3</a></li>
-      <li><a href="page4.html">Página 4</a></li>
-      <li><a href="page5.html">Página 5</a></li>
-
-      <div class="container">
-        <div class="row" id="image-grid">
-          <h3>Os blocos de imagem serão adicionados aqui dinamicamente</h3>
-        </div>
+  <body style="background-color: #070e1a;">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Home</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+         
+          <li class="nav-item">
+            <a class="nav-link" href="page3.html">Página 3</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="page4.html">Página 4</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="page5.html">Página 5</a>
+          </li>
+        </ul>
       </div>
-    </ul>
+    </nav>
+      <div class="col-md-auto">
+        <div class="row" id="image-grid" style="color:#e9e9e9">
+      </div>
+      </div>
 
     <script src="main.js"></script>
 
