Refatora a requisição para FETCH, e finaliza a página 2

--- a/pages/index.html
+++ b/pages/index.html
@@ -14,15 +14,22 @@
     <title>Projeto SI</title>
   </head>
 
-  <body style="background-color: #070e1a;">
+  <body style="background-color: #070e1a">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="#">Home</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-         
           <li class="nav-item">
             <a class="nav-link" href="page3.html">Página 3</a>
           </li>
@@ -35,10 +42,9 @@
         </ul>
       </div>
     </nav>
-      <div class="col-md-auto">
-        <div class="row" id="image-grid" style="color:#e9e9e9">
-      </div>
-      </div>
+    <div class="col-md-auto">
+      <div class="row" id="image-grid" style="color: #e9e9e9"></div>
+    </div>
 
     <script src="main.js"></script>
 
