--- a/pages/page3.html
+++ b/pages/page3.html
@@ -15,26 +15,34 @@
     <title>Projeto SI - Página 3</title>
   </head>
 
+  <body>
+    <ul>
+      <li><a href="index.html">Página 1</a></li>
+      <li><a href="page2.html">Página 2</a></li>
+      <li>Página 3</li>
+      <li><a href="page4.html">Página 4</a></li>
+      <li><a href="page5.html">Página 5</a></li>
+    </ul>
 
-<body>
-  <ul>
-    <li><a href="index.html">Página 1</a></li>
-    <li><a href="page2.html">Página 2</a></li>
-    <li>Página 3</li>
-    <li><a href="page4.html">Página 4</a></li>
-    <li><a href="page5.html">Página 5</a></li>
-  </ul>
+    <h1>Galeria de Imagens - Página 3</h1>
 
-  <h1>Galeria de Imagens - Página 3</h1>
+    <form id="imageForm">
+      <input type="text" id="imageUrl" placeholder="URL da imagem" required />
+      <input
+        type="text"
+        id="imageTitle"
+        placeholder="Título da imagem"
+        required
+      />
+      <input
+        type="text"
+        id="imageDescription"
+        placeholder="Descrição da imagem"
+        required
+      />
+      <button type="submit" id="addButton">Adicionar</button>
+    </form>
 
-  <form id="imageForm">
-    <input type="text" id="imageUrl" placeholder="URL da imagem" required>
-    <input type="text" id="imageTitle" placeholder="Título da imagem" required>
-    <input type="text" id="imageDescription" placeholder="Descrição da imagem" required>
-    <button type="submit" id="addButton">Adicionar</button>
-  </form>
-
-  <div class="gallery"></div>
-</body>
-
+    <div class="gallery"></div>
+  </body>
 </html>
