Estiliza todas as páginas com o layout padrão

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Projeto SI - Página 3</title>
+    <title>Sobre o Grupo</title>
   </head>
   <body style="background-color: #070e1a; color: #e9e9e9">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -44,23 +44,9 @@
         </ul>
       </div>
     </nav>
-
-    <h1>Galeria de Imagens - Página 3</h1>
-
-    <form>
-      <label for="imageUrl">URL da Imagem:</label>
-      <input type="text" id="imageUrl" required />
-
-      <label for="imageTitle">Título da Imagem:</label>
-      <input type="text" id="imageTitle" required />
-
-      <label for="imageDescription">Descrição da Imagem:</label>
-      <input type="text" id="imageDescription" required />
-
-      <button id="addButton">Adicionar Imagem</button>
-    </form>
-
-    <div class="gallery"></div>
-    <script src="main.js"></script>
+    <div>
+      <h1>Grupo Formado pelos Alunos:</h1>
+      <h2>Dominike Righi, Julia Zinser, Kauan Coli e Rodrigo Oliveira</h2>
+    </div>
   </body>
 </html>
