--- a/pages/index.html
+++ b/pages/index.html
@@ -39,6 +39,9 @@
           <li class="nav-item">
             <a class="nav-link" href="page5.html">Página 5</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="sobre.html">Sobre Nós</a>
+          </li>
         </ul>
       </div>
     </nav>
