--- a/pages/page2.html
+++ b/pages/page2.html
@@ -13,10 +13,36 @@
     <link rel="stylesheet" href="style.css" />
     <title>Informações da Imagem</title>
   </head>
-
   <body style="background-color: #070e1a; color: #e9e9e9">
-    <nav class="navbar navbar-dark bg-dark">
-      <span class="navbar-brand mb-0 h1">Informações da Imagem</span>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="index.html">Home</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="page3.html">Página 3</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="page4.html">Página 4</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="page5.html">Página 5</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="sobre.html">Sobre Nós</a>
+          </li>
+        </ul>
+      </div>
     </nav>
     <div
       style="
