--- a/pages/page4.html
+++ b/pages/page4.html
@@ -14,15 +14,37 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>Projeto SI - Página 4</title>
   </head>
-
-  <body>
-    <ul>
-      <li><a href="index.html">Página 1</a></li>
-      <li><a href="page2.html">Página 2</a></li>
-      <li><a href="page3.html">Página 3</a></li>
-      <li>Página 4</li>
-      <li><a href="page5.html">Página 5</a></li>
-    </ul>
+  <body style="background-color: #070e1a; color: #e9e9e9">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="index.html">Home</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="page3.html">Página 3</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="page4.html">Página 4</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="page5.html">Página 5</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="sobre.html">Sobre Nós</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
     <h1>Galeria de Imagens - Página 4</h1>
 
