--- a/pages/page2.html
+++ b/pages/page2.html
@@ -30,10 +30,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="page3.html">Página 3</a>
+            <a class="nav-link" href="page3.html">Adicionar imagem</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="page4.html">Página 4</a>
+            <a class="nav-link" href="page4.html">Editar imagem</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="page5.html">Página 5</a>
