--- a/pages/page4.html
+++ b/pages/page4.html
@@ -1,67 +1,63 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <title>Projeto SI - Página 4</title>
-  </head>
-  <body style="background-color: #070e1a; color: #e9e9e9">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="index.html">Home</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="page3.html">Página 3</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="page4.html">Página 4</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="page5.html">Página 5</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="sobre.html">Sobre Nós</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
 
-    <h1>Galeria de Imagens - Página 4</h1>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <title>Projeto SI - Página 4</title>
+</head>
 
+<body style="background-color: #070e1a; color: #e9e9e9">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="index.html">Home</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="page3.html">Adicionar imagem</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="page4.html">Editar imagem</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="page5.html">Página 5</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="sobre.html">Sobre Nós</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="col-md-auto">
+    <h1 style="padding:30px;">Editar imagem</h1>
+  </div>
+  <div class="col-md-auto">
     <form>
       <label for="imageUrl">URL da Imagem:</label>
       <input type="text" id="imageUrl" required />
-
+    </form>
+    <form>
       <label for="imageTitle">Título da Imagem:</label>
       <input type="text" id="imageTitle" required />
-
+    </form>
+    <form>
       <label for="imageDescription">Descrição da Imagem:</label>
       <input type="text" id="imageDescription" required />
-
-      <button type="submit" id="addButton">Adicionar Imagem</button>
     </form>
 
-    <div id="page4Gallery" class="gallery"></div>
-    <script src="main.js"></script>
-  </body>
+    <button style="margin:25px 35px;" type="submit" id="addButton">Editar imagem</button>
+  </div>
+
+  <div id="page4Gallery" class="gallery"></div>
+  <script src="main.js"></script>
+</body>
+
 </html>
