--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -1,52 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Sobre o Grupo</title>
-  </head>
-  <body style="background-color: #070e1a; color: #e9e9e9">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="index.html">Home</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="page3.html">Página 3</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="page4.html">Página 4</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="page5.html">Página 5</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="sobre.html">Sobre Nós</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <div>
-      <h1>Grupo Formado pelos Alunos:</h1>
-      <h2>Dominike Righi, Julia Zinser, Kauan Coli e Rodrigo Oliveira</h2>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Sobre o Grupo</title>
+</head>
+
+<body style="background-color: #070e1a; color: #e9e9e9">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="index.html">Home</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="page3.html">Adicionar imagem</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="page4.html">Editar imagem</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="page5.html">Página 5</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="sobre.html">Sobre Nós</a>
+        </li>
+      </ul>
     </div>
-  </body>
+  </nav>
+  <div class="col-md-auto" style="margin:25px 35px;">
+    <h1>Grupo Formado pelos Alunos:</h1>
+    <h2>Dominike Righi, Julia Zinser, Kauan Coli e Rodrigo Oliveira</h2>
+  </div>
+</body>
+
 </html>
