Atualiza pagina de Adicionar e Editar imagens

--- a/pages/page3.html
+++ b/pages/page3.html
@@ -30,10 +30,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="page3.html">Página 3</a>
+            <a class="nav-link" href="page3.html">Adicionar Imagens</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="page4.html">Página 4</a>
+            <a class="nav-link" href="page4.html">Editar Imagens</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="page5.html">Página 5</a>
@@ -45,7 +45,7 @@
       </div>
     </nav>
 
-    <h1>Galeria de Imagens - Página 3</h1>
+    <h1>Adicionar Imagens</h1>
 
     <form>
       <label for="imageUrl">URL da Imagem:</label>
@@ -57,10 +57,11 @@
       <label for="imageDescription">Descrição da Imagem:</label>
       <input type="text" id="imageDescription" required />
 
-      <button id="addButton">Adicionar Imagem</button>
+      <button id="addButton" disabled>Adicionar Imagem</button>
     </form>
 
     <div class="gallery"></div>
+
     <script src="main.js"></script>
   </body>
 </html>
