--- a/pages/index.html
+++ b/pages/index.html
@@ -31,10 +31,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="page3.html">Página 3</a>
+            <a class="nav-link" href="page3.html">Adicionar Imagens</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="page4.html">Página 4</a>
+            <a class="nav-link" href="page4.html">Editar Imagens</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="page5.html">Página 5</a>
@@ -50,21 +50,5 @@
     </div>
 
     <script src="main.js"></script>
-
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
