--- a/pages/page4.html
+++ b/pages/page4.html
@@ -31,10 +31,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="page3.html">Página 3</a>
+            <a class="nav-link" href="page3.html">Adicionar Imagens</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="page4.html">Página 4</a>
+            <a class="nav-link" href="page4.html">Editar Imagens</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="page5.html">Página 5</a>
@@ -46,9 +46,9 @@
       </div>
     </nav>
 
-    <h1>Galeria de Imagens - Página 4</h1>
+    <h1>Editar Informações da Imagem</h1>
 
-    <form>
+    <form style="display: none">
       <label for="imageUrl">URL da Imagem:</label>
       <input type="text" id="imageUrl" required />
 
