Correção de titulos rapida

--- a/pages/page4.html
+++ b/pages/page4.html
@@ -46,10 +46,12 @@
         </ul>
       </div>
     </nav>
+
     <div class="col-md-auto">
-      <h1 style="padding: 30px">Editar imagem</h1>
+      <h1 style="padding: 30px">Editar imagens</h1>
     </div>
-    <div class="col-md-auto">
+
+    <div class="col-md-auto" style="display: none">
       <form>
         <label for="imageUrl">URL da Imagem:</label>
         <input type="text" id="imageUrl" required />
