--- a/pages/page5.html
+++ b/pages/page5.html
@@ -46,6 +46,9 @@
     </nav>
     <div>
       <div>Página 5</div>
+      <div class="col-md-auto">
+        <div class="row" id="image-grid" style="color: #e9e9e9"></div>
+      </div>
     </div>
     <script src="main.js"></script>
   </body>
