Criação da página 5 com Event Listeners

--- a/pages/index.html
+++ b/pages/index.html
@@ -37,7 +37,7 @@
             <a class="nav-link" href="page4.html">Editar Imagens</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="page5.html">Página 5</a>
+            <a class="nav-link" href="page5.html">Ampliar imagem</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="sobre.html">Sobre Nós</a>
@@ -47,7 +47,7 @@
     </nav>
     <div class="col-md-auto">
       <div class="row" id="image-grid" style="color: #e9e9e9"></div>
-    </div>
+      </div>
 
     <script src="main.js"></script>
   </body>
