--- a/pages/page3.html
+++ b/pages/page3.html
@@ -36,7 +36,7 @@
             <a class="nav-link" href="page4.html">Editar imagem</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="page5.html">Página 5</a>
+            <a class="nav-link" href="page5.html">Ampliar imagem</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="sobre.html">Sobre Nós</a>
