--- a/pages/page5.html
+++ b/pages/page5.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Página 5</title>
+    <title>Visualização Cheia</title>
   </head>
   <body style="background-color: #070e1a; color: #e9e9e9">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -36,7 +36,7 @@
             <a class="nav-link" href="page4.html">Editar imagem</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="page5.html">Página 5</a>
+            <a class="nav-link" href="page5.html">Ampliar imagem</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="sobre.html">Sobre Nós</a>
@@ -45,9 +45,12 @@
       </div>
     </nav>
     <div>
-      <div>Página 5</div>
       <div class="col-md-auto">
-        <div class="row" id="image-grid" style="color: #e9e9e9"></div>
+        <h1 style="padding: 30px">Visualize em tela cheia</h1>
+      </div>
+      <div class="col-md-auto">
+        <div class="row" id="image-grid-full" style="color: #e9e9e9"></div>
+        <div class="expanded-image"></div>
       </div>
     </div>
     <script src="main.js"></script>
