Alteração do título da página "Ampliar imagem".

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
   <link rel="stylesheet" href="style.css" />
-  <title>Sobre Nós</title>
+  <title>Sobre nós</title>
 </head>
 
 <body style="background-color: #070e1a; color: #e9e9e9">
@@ -30,13 +30,13 @@
           <a class="nav-link" href="page5.html">Ampliar imagem</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="sobre.html">Sobre Nós</a>
+          <a class="nav-link" href="sobre.html">Sobre nós</a>
         </li>
       </ul>
     </div>
   </nav>
   <div class="about-center">
-    <div style="border-left: 3px solid #b9a9a9;">
+    <div style="border-left: 3px solid #a09f9f;">
       <div class="about-text">
         <h1 class="about-title">Integrantes do Grupo</h1>
         <p class="names-project">Dominike Righi, Julia Zinser, Kauan Coli & Rodrigo Oliveira</p>
