--- a/pages/page4.html
+++ b/pages/page4.html
@@ -41,7 +41,7 @@
             <a class="nav-link" href="page5.html">Ampliar imagem</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="sobre.html">Sobre Nós</a>
+            <a class="nav-link" href="sobre.html">Sobre nós</a>
           </li>
         </ul>
       </div>
