--- a/pages/page5.html
+++ b/pages/page5.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Visualização Cheia</title>
+    <title>Ampliar imagem</title>
   </head>
   <body style="background-color: #070e1a; color: #e9e9e9">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -39,14 +39,14 @@
             <a class="nav-link" href="page5.html">Ampliar imagem</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="sobre.html">Sobre Nós</a>
+            <a class="nav-link" href="sobre.html">Sobre nós</a>
           </li>
         </ul>
       </div>
     </nav>
     <div>
       <div class="col-md-auto">
-        <h1 style="padding: 30px">Visualize em tela cheia</h1>
+        <h1 style="padding: 30px">Amplie e visualize</h1>
       </div>
       <div class="col-md-auto">
         <div class="row" id="image-grid-full" style="color: #e9e9e9"></div>
